--- a/helpdesk/locale/es/LC_MESSAGES/django.po
+++ b/helpdesk/locale/es/LC_MESSAGES/django.po
@@ -30,7 +30,7 @@ msgstr ""
 #: templates/helpdesk/ticket_list.html:199 views/staff.py:976
 #: views/staff.py:982 views/staff.py:988
 msgid "Queue"
-msgstr "Cola"
+msgstr "Departamento"
 
 #: forms.py:122
 msgid "Summary of the problem"
